<resources>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_promise_explanation">"The app for this icon isn't installed. You can remove it, or search for the app and install it manually."</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_search">Search</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_error">"Couldn't connect"</string>
    <string name="abc_slice_more">More</string>
    <string name="abc_slice_more_content">+ %1$d</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slice_show_more">Show more</string>
    <string name="abc_slice_updated">Updated %1$s</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_app_version">Version</string>
    <string name="accessibility_app_usage_settings">App usage settings</string>
    <string name="accessibility_close">Close</string>
    <string name="accessibility_recent_apps">Recent apps</string>
    <string name="accessibility_smartspace_page">Page %1$d of %2$d</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_content_push">Push</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="action_dismiss_notification">Dismiss</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_move">Move item</string>
    <string name="action_move_here">Move item here</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_resize">Resize</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_select">Select</string>
    <string name="action_select_images">Select images</string>
    <string name="action_share">Share</string>
    <string name="action_show_doodle">Open Google Doodle</string>
    <string name="activity_not_available">"App isn't available"</string>
    <string name="activity_not_found">"App isn't installed."</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold the widget to move it around the Home screen</string>
    <string name="add_to_folder">Add to folder: %1$s</string>
    <string name="add_to_folder_with_app">Add to folder with %1$s</string>
    <string name="add_to_home_screen">Add to Home screen</string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="added_to_home_screen_accessibility_text">%1$s widget added to home screen</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="all_apps_label">All apps</string>
    <string name="all_apps_loading_message">Loading apps…</string>
    <string name="all_apps_no_search_results">No apps found matching \"%1$s\"</string>
    <string name="all_apps_personal_tab">Personal</string>
    <string name="all_apps_prediction_tip">Your predicted apps</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="all_apps_search_results">Search results</string>
    <string name="all_apps_work_tab">Work</string>
    <string name="allapps_quick_launch_chip_text">→ Open</string>
    <string name="allapps_search_hint">Search your phone and more</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_title">Allow Home screen rotation</string>
    <string name="allset_description">You’re ready to start using your phone</string>
    <string name="allset_hint">Swipe up to go Home</string>
    <string name="allset_navigation_settings"><annotation id="link">System navigation settings</annotation></string>
    <string name="allset_title">All set!</string>
    <string name="app_downloading_title">%1$s downloading, %2$s complete</string>
    <string name="app_filter_class">com.google.android.apps.nexuslauncher.NexusAppFilter</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="app_installing_title">%1$s installing, %2$s complete</string>
    <string name="app_launch_tracker_class">com.android.launcher3.appprediction.PredictionAppTracker</string>
    <string name="app_name">Launcher3</string>
    <string name="app_name_pixel_launcher">Pixel Launcher</string>
    <string name="app_waiting_download_title">%1$s waiting to install</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="assistant_gesture_feedback_swipe_not_diagonal">Make sure you swipe diagonally.</string>
    <string name="assistant_gesture_feedback_swipe_not_long_enough">Try swiping further.</string>
    <string name="assistant_gesture_feedback_swipe_too_far_from_corner">Make sure you swipe from a bottom corner of the screen.</string>
    <string name="assistant_gesture_tutorial_playground_subtitle">Try swiping diagonally from a bottom corner of the screen</string>
    <string name="assistant_gesture_tutorial_playground_title">Tutorial: Assistant</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="auto_add_shortcuts_label">Add app icons to Home screen</string>
    <string name="back_gesture_feedback_cancelled">Make sure you swipe from the right or left edge to the middle of the screen and let go.</string>
    <string name="back_gesture_feedback_complete_with_overview_follow_up">You learned how to swipe from the right to go back. Next up, learn how to switch apps.</string>
    <string name="back_gesture_feedback_complete_without_follow_up">You completed the go back gesture.</string>
    <string name="back_gesture_feedback_swipe_in_nav_bar">"Make sure you don't swipe too close to the bottom of the screen."</string>
    <string name="back_gesture_feedback_swipe_too_far_from_edge">Make sure you swipe from the far-right or far-left edge.</string>
    <string name="close">Close</string>
    <string name="label_lens">Google Lens</string>
    <string name="label_search">Search</string>
    <string name="label_voice_search">Voice search</string>
    <string name="notification_dots_title">Notification dots</string>
    <string name="overview_suggestions_settings_summary">Show suggested actions and indicators in Overview</string>
    <string name="overview_suggestions_settings_title">Overview suggestions</string>
    <string name="pref_open_source_licenses_title">Open source licenses</string>
    <string name="pref_show_google_now_summary">@string/msg_minus_one_on_left</string>
    <string name="search_keyboard_snackbar_prompt">Always show keyboard here?</string>
    <string name="search_keyboard_snackbar_turn_off">Dismiss</string>
    <string name="search_keyboard_snackbar_turn_on">Yes</string>
    <string name="search_pref_category_experiments">Experiments</string>
    <string name="search_pref_category_info">Swipe up to search for apps, people, and more</string>
    <string name="search_pref_category_result_types">Show in search results</string>
    <string name="search_pref_filter_by_allow_list">Show results from allow-list apps only.</string>
    <string name="search_pref_info_btn">Learn more</string>
    <string name="search_pref_legacy_ime_title">Open IME asynchronously</string>
    <string name="search_pref_result_appsearch_settings_title">AppSearch Settings</string>
    <string name="search_pref_result_appsearch_tips_title">AppSearch Tips</string>
    <string name="search_pref_result_chrometab_title">Chrome Tab</string>
    <string name="search_pref_result_memory_title">Memory</string>
    <string name="search_pref_result_navvysite_title">Navigational Site</string>
    <string name="search_pref_result_people_desc">Contacts, conversations, and more</string>
    <string name="search_pref_result_people_tile_title">People Tile</string>
    <string name="search_pref_result_people_title">People</string>
    <string name="search_pref_result_play_desc">Sourced from the Play store</string>
    <string name="search_pref_result_play_title">Play store</string>
    <string name="search_pref_result_screenshot_title">Screenshot</string>
    <string name="search_pref_result_settings_title">Settings</string>
    <string name="search_pref_result_shortcuts_desc">Show shortcuts for apps and people</string>
    <string name="search_pref_result_shortcuts_title">Shortcuts</string>
    <string name="search_pref_result_tips_title">Tips</string>
    <string name="search_pref_result_widgets_title">Widgets</string>
    <string name="search_pref_screen_desc">Search your device from all apps</string>
    <string name="search_pref_screen_title">Search your phone</string>
    <string name="search_pref_show_hidden_targets_title">Show hidden targets</string>
    <string name="smartspace_preferences_in_settings">At A Glance</string>
    <string name="smartspace_preferences_in_settings_desc">At the top of your Home screen</string>
    <string name="suggestion_pref_screen_desc">For all apps and Home screen suggestions</string>
    <string name="suggestion_pref_screen_title">Suggestions</string>
    <string name="title_show_google_app">Swipe to access Google app</string>
</resources>