<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/smartspace_preferences_in_settings"
        android:key="pref_smartspace"
        android:summary="@string/smartspace_preferences_in_settings_desc" />
    <SwitchPreference
        android:title="@string/auto_add_shortcuts_label"
        android:key="pref_add_icon_to_home"
        android:summary="@string/auto_add_shortcuts_description"
        android:defaultValue="true" />
    <SwitchPreference
        android:title="@string/title_show_google_app"
        android:key="pref_enable_minus_one"
        android:summary="@string/pref_show_google_now_summary"
        android:defaultValue="true" />
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/suggestion_pref_screen_title"
        android:key="pref_suggestions"
        android:summary="@string/suggestion_pref_screen_desc" />
    <SwitchPreference
        android:persistent="true"
        android:title="@string/allow_rotation_title"
        android:key="pref_allowRotation"
        android:summary="@string/allow_rotation_desc"
        android:defaultValue="false" />
</PreferenceScreen>