<?xml version="1.0" encoding="utf-8"?>
<com.google.android.apps.nexuslauncher.qsb.QsbLayout
    android:layout_gravity="center|top"
    android:background="@drawable/bg_google_qsb"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/qsb_widget_height"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:contentDescription="@string/label_search"
    android:backgroundTint="@color/hotseat_qsb_bg_color"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_gravity="start|center"
        android:id="@id/g_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_super_g_color"
        android:layout_marginStart="@dimen/qsb_g_icon_marginStart" />
    <LinearLayout
        android:layout_gravity="end|center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginTop="-6.0dip"
        android:layout_marginBottom="-6.0dip">
        <com.google.android.apps.nexuslauncher.qsb.AssistantIconView
            android:id="@id/mic_icon"
            android:background="?android:selectableItemBackgroundBorderless"
            android:focusable="false"
            android:clickable="true"
            android:layout_width="@dimen/qsb_mic_width"
            android:layout_height="fill_parent"
            android:contentDescription="@string/label_voice_search" />
        <ImageButton
            android:id="@id/lens_icon"
            android:background="?android:selectableItemBackgroundBorderless"
            android:padding="@dimen/qsb_lens_padding"
            android:focusable="false"
            android:visibility="gone"
            android:clickable="true"
            android:layout_width="@dimen/qsb_lens_width"
            android:layout_height="fill_parent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/label_lens"
            android:layout_marginEnd="@dimen/qsb_lens_marginEnd" />
    </LinearLayout>
</com.google.android.apps.nexuslauncher.qsb.QsbLayout>